# Library_Client_Server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
examples/cpp/: MessageExports.cpp  UserClient.cpp  UserServer.cpp  client_create_handlers.cpp  server_create_handlers.cpp
examples/headers/: Messages.h  UserClient.h  UserServer.h  client_create_handlers.h  enums.h  logs.h  server_create_handlers.h
src/cpp/: Client.cpp  Connection.cpp  HandlerMessageClient.cpp  HandlerMessageServer.cpp  Serealize.cpp  Server.cpp
src/headers/: Client.h  CompareMessage.h  Connection.h  HandlerMessage.h  HandlerMessageClient.h  HandlerMessageServer.h  ISerealize.h  Message.h  Serealize.h  Server.h  ThreadSafeQueue.h
tests/: ConnectionTests.cpp  HandlerClientTests.cpp  HandlerServerTests.cpp
